[gd_scene load_steps=12 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/EnemyStatue.gd" type="Script" id=5]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Escenas/ScreenShake.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "BlinkStatue"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "StopBlinkStatue"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemyStatue" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 1 )]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_health = 5

[node name="EnemySprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0
bus = "Sonido"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="EffectsSprite" type="Sprite" parent="."]

[node name="HitboxEffects1" parent="EffectsSprite" instance=ExtResource( 1 )]
collision_mask = 4

[node name="AttackZone" parent="." instance=ExtResource( 4 )]

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]

[node name="Effects2Sprite" type="Sprite" parent="."]

[node name="HitboxEffects2" parent="Effects2Sprite" instance=ExtResource( 1 )]
collision_mask = 4

[node name="ScreenShake" parent="." instance=ExtResource( 7 )]

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/BlinkStatue = SubResource( 2 )
anims/StopBlinkStatue = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
